AUX_SOURCE_DIRECTORY(. APPLICATION_SRC)
AUX_SOURCE_DIRECTORY(Universal UNIVERSAL_SRC)
AUX_SOURCE_DIRECTORY(Terminal TERMINAL_SRC)
AUX_SOURCE_DIRECTORY(Network NETWORK_SRC)
AUX_SOURCE_DIRECTORY(Network/Adapter NETWORK_ADAPTER_SRC)
AUX_SOURCE_DIRECTORY(Network/Service NETWORK_SERVICE_SRC)
AUX_SOURCE_DIRECTORY(Network/Transfer NETWORK_TRANSFER_SRC)
AUX_SOURCE_DIRECTORY(Device/Spi DEVICE_SPI_SRC)

ADD_LIBRARY(application 
	${UNIVERSAL_SRC}
	${TERMINAL_SRC}
	${NETWORK_ADAPTER_SRC}
	${NETWORK_SERVICE_SRC}
	${NETWORK_TRANSFER_SRC}
	${NETWORK_SRC}
	${APPLICATION_SRC}
	${DEVICE_SPI_SRC}
)

TARGET_LINK_LIBRARIES(application common)
