AUX_SOURCE_DIRECTORY(Structure STRUCTURE_SRC)
#AUX_SOURCE_DIRECTORY(Terminal TERMINAL_SRC)
AUX_SOURCE_DIRECTORY(Utilities UTILITIES_SRC)

#INCLUDE_DIRECTORIES(
#    ${STRUCTURE_SRC}
#)

ADD_LIBRARY(common 
	${STRUCTURE_SRC}
	#${TERMINAL_SRC}
	${UTILITIES_SRC}
)

TARGET_LINK_LIBRARIES(common freertos)
