AUX_SOURCE_DIRECTORY(FreeRtosV730 FREERTOS_SRC)
AUX_SOURCE_DIRECTORY(FreeRtosV730/Porting/ARM_CM0 FREERTOS_PORTING_CM0_SRC)
AUX_SOURCE_DIRECTORY(FreeRtosV730/Porting/ARM_CM3 FREERTOS_PORTING_CM3_SRC)
AUX_SOURCE_DIRECTORY(FreeRtosV730/Porting/ARM_CM3_MPU FREERTOS_PORTING_CM3_MPU_SRC)
AUX_SOURCE_DIRECTORY(FreeRtosV730/Porting/ARM_CM4F FREERTOS_PORTING_CM4F_SRC)
AUX_SOURCE_DIRECTORY(FreeRtosV730/MemMang FREERTOS_MEM_SRC)

ADD_LIBRARY(freertos 
	${FREERTOS_SRC} 
	${FREERTOS_PORTING_CM0_SRC}
	${FREERTOS_PORTING_CM3_SRC}
	${FREERTOS_PORTING_CM3_MPU_SRC}
	${FREERTOS_PORTING_CM4F_SRC}
	${FREERTOS_MEM_SRC}
)
