AUX_SOURCE_DIRECTORY(Protocol PROTOCOL_SRC)
AUX_SOURCE_DIRECTORY(Adapter ADAPTER_SRC)
AUX_SOURCE_DIRECTORY(Transfer TRANSFER_SRC)
AUX_SOURCE_DIRECTORY(Service SERVICE_SRC)
AUX_SOURCE_DIRECTORY(. NETWORK_SRC)

ADD_LIBRARY(appnetwork 
    ${NETWORK_SRC}
	${PROTOCOL_SRC} 
	${ADAPTER_SRC}
	${TRANSFER_SRC}
	${SERVICE_SRC}
)
