ADD_SUBDIRECTORY(Analog)
ADD_SUBDIRECTORY(Gadget)
ADD_SUBDIRECTORY(Storage)

#AUX_SOURCE_DIRECTORY(Analog ANALOG_SRC)
#AUX_SOURCE_DIRECTORY(Gadget GADGET_SRC)
#AUX_SOURCE_DIRECTORY(Network NETWORK_SRC)
#AUX_SOURCE_DIRECTORY(Storage STORAGE_SRC)

#ADD_LIBRARY(chip 
	#${ANALOG_SRC} 
	#${GADGET_SRC}
	#${NETWORK_SRC}
	#${STORAGE_SRc}
	#)


