AUX_SOURCE_DIRECTORY(api API_SRC)
AUX_SOURCE_DIRECTORY(core CORE_SRC)
AUX_SOURCE_DIRECTORY(core/ipv4 IPV4_SRC)
#AUX_SOURCE_DIRECTORY(core/ipv6 IPV6_SRC)
AUX_SOURCE_DIRECTORY(core/snmp SNMP_SRC)
AUX_SOURCE_DIRECTORY(netif NETIF_SRC)
AUX_SOURCE_DIRECTORY(netif/ppp PPP_SRC)

INCLUDE_DIRECTORIES(.)

ADD_LIBRARY(lwip 
	${API_SRC}
	${CORE_SRC}
	${IPV4_SRC}
	${SNMP_SRC}
	${NETIF_SRC}
	${PPP_SRC}
)

TARGET_LINK_LIBRARIES(lwip stm32f407)


