INCLUDE_DIRECTORIES(Manufacturer/StdPeriphV350/Libraries/STM32F10x_StdPeriph_Driver/inc)
INCLUDE_DIRECTORIES(Manufacturer/)

AUX_SOURCE_DIRECTORY(Interrupt INTERRUPT_SRC)
AUX_SOURCE_DIRECTORY(Peripherals/Uart PERIPHERALS_UART_SRC)
AUX_SOURCE_DIRECTORY(Peripherals/Spi PERIPHERALS_SPI_SRC)
AUX_SOURCE_DIRECTORY(Peripherals/Timer PERIPHERALS_TIMER_SRC)

ADD_LIBRARY(stm32f107 
    ${INTERRUPT_SRC}
	${PERIPHERALS_UART_SRC}
	${PERIPHERALS_SPI_SRC}
	${PERIPHERALS_TIMER_SRC}
)

TARGET_LINK_LIBRARIES(stm32f107 common)  
