INCLUDE_DIRECTORIES(Manufacturer/StdPeriphV161/Libraries/STM32F4xx_StdPeriph_Driver/inc)
INCLUDE_DIRECTORIES(Manufacturer/EthLwipV111/Libraries/STM32F4x7_ETH_Driver/inc)
INCLUDE_DIRECTORIES(Manufacturer/)

AUX_SOURCE_DIRECTORY(Middleware/Lwip/FreeRtos LWIP_FREERTOS_SRC)
AUX_SOURCE_DIRECTORY(Manufacturer/EthLwipV111/Libraries/STM32F4x7_ETH_Driver/src ETH_LWIP_SRC)
AUX_SOURCE_DIRECTORY(Interrupt INTERRUPT_SRC)
AUX_SOURCE_DIRECTORY(Peripherals/Ethernet PERIPHERALS_ETHERNET_SRC)
AUX_SOURCE_DIRECTORY(Peripherals/Flash PERIPHERALS_FLASH_SRC)
AUX_SOURCE_DIRECTORY(Peripherals/Gpio PERIPHERALS_GPIO_SRC)
AUX_SOURCE_DIRECTORY(Peripherals/Uart PERIPHERALS_UART_SRC)

ADD_LIBRARY(stm32f407 
	${LWIP_FREERTOS_SRC} 
	${ETH_LWIP_SRC}
    ${INTERRUPT_SRC}
	${PERIPHERALS_ETHERNET_SRC}
	${PERIPHERALS_FLASH_SRC}
	${PERIPHERALS_GPIO_SRC}
	${PERIPHERALS_UART_SRC}
)

TARGET_LINK_LIBRARIES(stm32f407 common)  
